[QA-10785] Remaining MaxPermSize entries removed