@@ -659,7 +659,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>${surefire.plugin.version}</version>
                         <configuration>
-                            <argLine>-Xmx2048m -XX:MaxPermSize=320m</argLine>
+                            <argLine>-Xmx2048m</argLine>
                             <skipTests>false</skipTests>
                             <threadCount>1</threadCount>
                         </configuration>
@@ -676,7 +676,7 @@
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <version>${failsafe.plugin.version}</version>
                         <configuration>
-                            <argLine>-Xmx2048m -XX:MaxPermSize=320m</argLine>
+                            <argLine>-Xmx2048m</argLine>
                             <skipTests>false</skipTests>
                             <threadCount>1</threadCount>
                             <includes>
